package com.simpletickr.fx

enum class FxRateSource { AUTO, USER, IMPORTED }
