package com.simpletickr.gains

enum class RealizationMethod { FIFO, AVERAGE_COST }
