package com.simpletickr.portfolio

data class Portfolio(val id: Long, val name: String)
