package com.simpletickr.settings

import com.simpletickr.shared.CurrencyCode

data class UserSettings(
    val baseCurrency: CurrencyCode,
)
